# templates-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml
migrations/: 20241110000001_create_templates_table.sql
src/: cache.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/handlers/: health_handler.rs  mod.rs  template_handler.rs
src/middleware/: auth.rs  metrics.rs  mod.rs
src/models/: mod.rs  response.rs  template.rs
src/services/: mod.rs  render_service.rs  template_service.rs
tests/: integration.rs  unit.rs
tests/integration/: lib.rs  render_integration_tests.rs  setup.rs  template_crud_tests.rs
tests/unit/: lib.rs  render_tests.rs  template_validation_tests.rs
