filepath: Cargo.toml
[package]
name = "templates-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
jsonwebtoken = "9.3"
lazy_static = "1.5"
utoipa = { version = "4.2", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2.10"